# dotmac_sub

./: .agent-run.sh  .bandit  .dockerignore  .env.agent-swarm  .env.example  .gitignore  .impeccable.md  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Actually, looking more carefully at the file content  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  PLAN.md  admin-invoice.md  brand.json  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mypy.txt  mypy_no_incremental.txt  online-onts-list.md  package-lock.json  package.json  portal-login.md  pyproject.toml  pytest.ini  tailwind.config.js  terminal_account_arrears_2026-06-18.csv  terminal_account_arrears_REVIEW_2026-06-18.csv  unmapped_subs_for_review.csv  vieweas-confirm.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  e2e.yml  ghcr.yml  mobile-release.yml  mobile.yml  version-bump-pr.yml  version-impact.yml  version-tag.yml
.playwright-mcp/: page-2026-04-01T20-41-19-723Z.yml  page-2026-04-01T20-43-31-011Z.yml  page-2026-04-01T20-44-15-015Z.yml  page-2026-04-02T08-07-10-920Z.yml  page-2026-04-02T08-08-38-927Z.yml
.seabone/: MEMORY.md  SOUL.md  backlog.json  ci-state.json  completed-tasks.json  config.json  conflict-state.json  docs-state.json  model-memory.json  orchestrator-state.json  pm-state.json  shared-context.json
.seabone/findings/: 2026-02-27-api-cycle3.json  2026-02-27-api-cycle7.json  2026-02-27-deps-audit.json  2026-02-27-deps-cycle4.json  2026-02-27-quality-cycle2.json  2026-02-27-quality-cycle6.json  2026-02-27-security-cycle1.json  2026-02-28-api-cycle10.json  2026-02-28-deps-cycle11.json  2026-02-28-quality-cycle9.json  2026-02-28-security-cycle8.json
.seabone/memory/: 2026-02-27.md  2026-02-28.md
.seabone/metrics/: 2026-02-27-0456.json  2026-02-27-0524.json  2026-02-27-0624.json  2026-02-27-0724.json  2026-02-27-0824.json  2026-02-27-0914.json  2026-02-27-1014.json  2026-02-27-1114.json  2026-02-27-1214.json  2026-02-27-1314.json  2026-02-27-1414.json  2026-02-27-1514.json  2026-02-27-1614.json  (+18 more)
Actually, let me re-examine the `app/: errors.py` file more carefully. I see on line 133
alembic/: __init__.pyi  env.py
app/: __init__.py  celery_app.py  celery_scheduler.py  config.py  csrf.py  db.py  errors.py  logging.py  main.py  metrics.py  monitoring.py  observability.py  request_meta.py  team_inbox_smtp.py  telemetry.py  timezone.py  version.py  web_domains.py  web_home.py
docs/: ACCOUNT_CREDIT_DEPOSITS.md  ADMIN_OPERATIONS_GUIDE.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  BACKOFFICE_INTEGRATION_BOUNDARY.md  BILLING_AUTOMATION_LAUNCH_RUNBOOK.md  CHAT_LIVE_SETUP.md  CODING_STANDARD.md  CONTROL_RELATIONSHIPS_AND_BRANDING_SOT.md  DASHBOARD_OVERVIEW_PAGE_CONTRACT.md  DESIGN_REVIEW_CHECKLIST.md  DEVELOPER_GUIDE.md  EXPECTATIONS.md  FEATURE_ROADMAP.md  FINANCIAL_ACCESS_ENFORCEMENT.md  FRONTEND_SPEC.md  LAUNCH_CHECKLIST.md  METRICS_SCRAPE_SAFETY.md  My Map.kmz  My Places Updated map.kmz  NETWORK_SUPPORT_GAP_LIST.md  OLT_ONT_ACS_ARCHITECTURE.md  OLT_ONT_DATA_MODEL_V1.md  OLT_ONT_OVERHAUL_V1.md  OPERATIONS_ESCALATION_PLAN.md  OSP Access point.kmz  OSP Air fiber.kmz  OSP Building.kmz  OSP Cabinet.kmz  OSP Paths.kmz  OSP Splice info.kmz  PARTY_CONTACT_INBOX_PROJECTION.md  PARTY_CUSTOMER_LIFECYCLE.md  PARTY_FIRST_REFERRAL_CAPTURE.md  PARTY_IDENTITY_ADJUDICATION_PLAN.md  PARTY_IDENTITY_BACKFILL_EXECUTION.md  PARTY_IDENTITY_CLEANUP_AUDIT.md  PARTY_ORGANIZATION_PROFILE_BINDING.md  PARTY_PRINCIPAL_CONTEXT_BINDING.md  PARTY_ROLE_RELATIONSHIP_SOT.md  (+27 more)
field_mobile/: .gitignore  README.md  pubspec.yaml
mobile/: .gitignore  PUSH_SETUP.md  README.md  analysis_options.yaml  dart_defines.example.json  devserve.py  flutterw  pubspec.yaml
nginx/: selfcare.dotmac.io.conf  setup-nginx.sh
scripts/: _run_step1.py  activate_dual_stack.py  analyst.sh  audit_migrations.py  audit_read_constraints.py  backfill_ip_ranges.py  backfill_ont_bundle_assignments.py  backlog.sh  backup_dotmac_sub_db_to_rclone.sh  batch-tasks.sh  bulk_tr069_rebind.py  bump_version.py  capture_guide_screenshots.py  capture_ops_guide_screenshots.py  check-agents.sh  check_autofind_all_olts.py  check_wifi_status.py  cleanup-worktrees.sh  cleanup_synthetic_snmp_onts.py  configure_zabbix_webhook.py  consolidate-prs.sh  create_wan_profiles.py  daily-loop.sh  db_audit_nas_indexes_and_unallocated_payments.sql  db_backup.sh  deploy.sh  deploy_reconcile.py  deploy_shared_architecture.sh  device_projection_shadow_diff.py  docker_image_retention.sh  encrypt_nas_credentials.py  encrypt_ont_passwords.py  find_ont_across_olts.py  fleet-manager.sh  generate_guide_pdf.py  generate_illustrations.py  generate_mikrotik_snmp_enable.py  generate_ops_guide_pdf.py  guide_pdf_common.py  huawei_dual_stack_canary.py  (+50 more)
static/: manifest.json
templates/: base.html  domain.html  index.html
tests/: conftest.py  fup_helpers.py  integration_platform_helpers.py  legacy_ont_profile_link.py  mocks.py  payment_provider_event_helpers.py  prepaid_funding_helpers.py  prepaid_funding_test_support.py  referral_program_testkit.py  reseller_status_helpers.py  test_access_control_observability.py  test_access_credential_secret.py  test_access_enforcement_strays.py  test_access_path_endpoint_projection.py  test_access_repair_schedule_migration.py  test_access_resolution.py  test_account_adjustment_evidence.py  test_account_billing_approval.py  test_account_credit_deposits.py  test_account_deletion.py  test_account_lifecycle.py  test_account_status_reconcile.py  test_acs_config_adapter.py  test_acs_reachability.py  test_acs_verify_grace_audit.py  test_action_forms.py  test_addon_expiry_notifications.py  test_address_geocode_routes.py  test_admin_actor_ids.py  test_admin_alerts.py  test_admin_attention.py  test_admin_change_plan_scheduling.py  test_admin_customer_suspend_visibility.py  test_admin_dashboard_contracts.py  test_admin_inbox_list.py  test_admin_inbox_workspace.py  test_admin_maps_web.py  test_admin_nav_discoverability.py  test_admin_radius_schema.py  test_admin_referrals_web.py  (+1158 more)
(+4646 files in other folders)
