[tool.poetry]
name = "dotmac_sm"
version = "0.1.0"
description = "Subscriber management API and web UI"
authors = ["Codex <codex@local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.34.0", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
jinja2 = "3.1.6"
nh3 = ">=0.2.0"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
opentelemetry-api = "1.39.1"
opentelemetry-sdk = "1.39.1"
opentelemetry-exporter-otlp = "1.39.1"
opentelemetry-instrumentation-fastapi = "0.60b1"
opentelemetry-instrumentation-sqlalchemy = "0.60b1"
opentelemetry-instrumentation-celery = "0.60b1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyotp = "2.9.0"
slowapi = ">=0.1.9"
cryptography = ">=44.0.1"
paramiko = "3.4.1"
ncclient = "0.6.15"
routeros-api = "0.17.0"
pyrad = "2.4"
geoalchemy2 = "0.14.7"
shapely = "2.0.4"
weasyprint = "61.2"
aiosmtpd = "1.4.6"
sse-starlette = "^1.6.0"
boto3 = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
playwright = "1.46.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
mypy = "^1.11.0"
bandit = {version = "^1.9.0", extras = ["toml"]}
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert (OK in tests)
    "B007",   # loop control variable not used
    "B017",   # assert raises Exception in tests/legacy code
    "B904",   # raise without explicit cause in except
    "B905",   # zip strict parameter not explicitly set
    "C401",   # unnecessary generator for set
    "C408",   # unnecessary collection() call
    "C416",   # unnecessary comprehension
    "E402",   # import not at top of file
    "E712",   # boolean comparison against True/False
    "E741",   # ambiguous variable names in legacy/tests
    "F841",   # assigned but unused local variable
    "S105",   # possible hardcoded password string
    "S110",   # try/except/pass
    "S112",   # try/except/continue
    "S507",   # paramiko host key policy warning
    "S603",   # subprocess call
    "S607",   # partial executable path
    "UP042",  # prefer StrEnum
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # Allow assert and hardcoded passwords in tests
"scripts/**" = ["S101", "S105", "S106"]
"alembic/**" = ["E402"]  # Allow imports not at top of file

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "stubs"

[tool.bandit]
exclude_dirs = ["tests", "alembic", "scripts"]
skips = ["B101"]  # Skip assert warnings

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
