[tool.poetry]
name = "dotmac_sm"
version = "0.1.0"
description = "Subscriber management API and web UI"
authors = ["DotMac <engineering@dotmac.local>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
sqlalchemy = "2.0.31"
psycopg = {version = "3.1.19", extras = ["binary"]}
alembic = "1.13.2"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
jinja2 = "3.1.4"
redis = "5.0.4"
celery = {version = "5.4.0", extras = ["redis"]}
prometheus-client = "0.20.0"
httpx = "0.27.0"
opentelemetry-api = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-instrumentation-fastapi = "0.47b0"
opentelemetry-instrumentation-sqlalchemy = "0.47b0"
opentelemetry-instrumentation-celery = "0.47b0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pyotp = "2.9.0"
cryptography = "42.0.8"
paramiko = "3.4.1"
ncclient = "0.6.15"
routeros-api = "0.17.0"
pyrad = "2.4"
geoalchemy2 = "0.14.7"
shapely = "2.0.4"
weasyprint = "61.2"
aiosmtpd = "1.4.6"
sse-starlette = "^1.6.0"
boto3 = "^1.40.0"
pymysql = "^1.1.2"
sshtunnel = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
playwright = "1.46.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
mypy = "^1.11.0"
bandit = {version = "^1.9.0", extras = ["toml"]}
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert (OK in tests)
    "B007",   # loop control variable not used
    "B017",   # assert raises Exception in tests/legacy code
    "B904",   # raise without explicit cause in except
    "B905",   # zip strict parameter not explicitly set
    "C401",   # unnecessary generator for set
    "C408",   # unnecessary collection() call
    "C416",   # unnecessary comprehension
    "E402",   # import not at top of file
    "E712",   # boolean comparison against True/False
    "E741",   # ambiguous variable names in legacy/tests
    "F841",   # assigned but unused local variable
    "S105",   # possible hardcoded password string
    "S110",   # try/except/pass
    "S112",   # try/except/continue
    "S507",   # paramiko host key policy warning
    "S603",   # subprocess call
    "S607",   # partial executable path
    "UP042",  # prefer StrEnum
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # Allow assert and hardcoded passwords in tests
"scripts/**" = ["S101", "S105", "S106"]
"alembic/**" = ["E402"]  # Allow imports not at top of file

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "app.poller.mikrotik_poller",
    "app.schemas.provisioning",
    "app.services.auth_flow",
    "app.services.catalog.subscriptions",
    "app.services.email",
    "app.services.events.dispatcher",
    "app.services.events.handlers.provisioning",
    "app.services.integrations.accounting_sync",
    "app.services.integrations.connectors.whatsapp",
    "app.services.nas",
    "app.services.nas_pkg.web_builders",
    "app.services.network.ont_tr069",
    "app.services.reseller_portal",
    "app.services.snmp_discovery",
    "app.services.support",
    "app.services.table_config",
    "app.services.web_billing_invoice_batch",
    "app.services.web_billing_invoice_bulk",
    "app.services.web_billing_overview",
    "app.services.web_billing_payments",
    "app.services.web_billing_reconciliation",
    "app.services.web_customer_user_access",
    "app.services.web_fup",
    "app.services.web_integrations",
    "app.services.web_network_core_devices_forms",
    "app.services.web_network_core_devices_views",
    "app.services.web_network_core_runtime",
    "app.services.web_network_cpes",
    "app.services.web_network_dns_threats",
    "app.services.web_network_ip",
    "app.services.web_network_olts",
    "app.services.web_network_ont_charts",
    "app.services.web_network_onu_types",
    "app.services.web_reports_extended",
    "app.services.web_subscriber_forms",
    "app.services.web_system_export_tool",
    "app.services.web_system_geocode_tool",
    "app.services.web_system_import_wizard",
    "app.services.web_system_logs",
    "app.services.web_system_users",
    "app.services.web_vpn_management",
    "app.tasks.catalog",
    "app.web.admin.billing_accounts",
    "app.web.admin.integrations",
    "app.web.admin.network_core_devices",
    "app.web.admin.network_fiber_plant",
    "app.web.admin.network_olts_onts",
    "app.web.admin.network_pop_sites",
    "app.web.admin.provisioning",
    "app.web.admin.resellers",
    "app.web.admin.subscribers",
    "app.web.admin.support_tickets",
    "app.web.admin.system",
    "app.websocket.manager",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "scripts.migration",
    "scripts.migration.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.services.catalog.add_ons",
    "app.services.catalog.credentials",
    "app.services.catalog.offers",
    "app.services.catalog.profiles",
    "app.services.catalog.radius",
    "app.services.gis",
    "app.services.network.cpe",
    "app.services.network.fiber_services",
    "app.services.network.ip",
    "app.services.network.olt",
    "app.services.network.splitters",
]
disable_error_code = ["override"]

[tool.bandit]
exclude_dirs = ["tests", "alembic", "scripts"]
skips = ["B101"]  # Skip assert warnings

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
