[project]
name = "dotmac_sm"
version = "0.1.0"
description = "Subscriber management API and web UI"
authors = [{name = "DotMac", email = "engineering@dotmac.local"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "sqlalchemy==2.0.31",
    "psycopg[binary]==3.1.19",
    "alembic==1.13.2",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "jinja2==3.1.4",
    "redis==5.0.4",
    "celery[redis]==5.4.0",
    "prometheus-client==0.20.0",
    "httpx==0.27.0",
    "opentelemetry-api==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-instrumentation-fastapi==0.47b0",
    "opentelemetry-instrumentation-sqlalchemy==0.47b0",
    "opentelemetry-instrumentation-celery==0.47b0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pyotp==2.9.0",
    "cryptography==42.0.8",
    "paramiko==3.4.1",
    "ncclient==0.6.15",
    "routeros-api==0.17.0",
    "pyrad==2.4",
    "geoalchemy2==0.14.7",
    "shapely==2.0.4",
    "weasyprint==61.2",
    "aiosmtpd==1.4.6",
    "sse-starlette>=1.6.0",
    "boto3>=1.40.0",
    "pymysql>=1.1.2",
    "sshtunnel>=0.4.0",
    "textfsm>=1.1.3",
    "python-logging-loki>=0.3.1",
    "sentry-sdk[celery,fastapi,sqlalchemy] (>=2.57.0,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "playwright==1.46.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "bandit[toml]>=1.9.0",
    "pre-commit>=3.7.0",
    "import-linter>=2.0",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert (OK in tests)
    "B007",   # loop control variable not used
    "B017",   # assert raises Exception in tests/legacy code
    "B904",   # raise without explicit cause in except
    "B905",   # zip strict parameter not explicitly set
    "C401",   # unnecessary generator for set
    "C408",   # unnecessary collection() call
    "C416",   # unnecessary comprehension
    "E402",   # import not at top of file
    "E712",   # boolean comparison against True/False
    "E741",   # ambiguous variable names in legacy/tests
    "F841",   # assigned but unused local variable
    "S105",   # possible hardcoded password string
    "S110",   # try/except/pass
    "S112",   # try/except/continue
    "S507",   # paramiko host key policy warning
    "S603",   # subprocess call
    "S607",   # partial executable path
    "UP042",  # prefer StrEnum
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # Allow assert and hardcoded passwords in tests
"scripts/**" = ["S101", "S105", "S106"]
"scripts/migration/**" = ["S608"]
"alembic/**" = ["E402"]  # Allow imports not at top of file
"alembic/versions_archive/**" = ["S104", "S608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "app.poller.mikrotik_poller",
    "app.schemas.provisioning",
    "app.services.auth_flow",
    "app.services.catalog.subscriptions",
    "app.services.email",
    "app.services.events.dispatcher",
    "app.services.events.handlers.provisioning",
    "app.services.integrations.accounting_sync",
    "app.services.integrations.connectors.whatsapp",
    "app.services.acs_config_adapter",
    "app.services.acs_service_intent_adapter",
    "app.services.acs_state_adapter",
    "app.services.nas",
    "app.services.nas_pkg.web_builders",
    "app.services.notification_adapter",
    "app.services.olt_action_adapter",
    "app.services.olt_detail_adapter",
    "app.services.queue_adapter",
    "app.services.scheduler_config",
    "app.services.service_intent_adapter",
    "app.services.service_intent_ui_adapter",
    "app.services.splynx_customer_sync",
    "app.services.network.ont_tr069",
    "app.services.network.olt_targeted_sync",
    "app.services.network.authorization_executor",
    "app.services.network.config_validator_adapter",
    "app.services.network.metrics_adapters",
    "app.services.network.olt_api_operations",
    "app.services.network.olt_authorization_workflow",
    "app.services.network.olt_autofind",
    "app.services.network.olt_config_audit",
    "app.services.network.olt_monitoring_devices",
    "app.services.network.olt_protocol_adapters",
    "app.services.network.olt_vendor_adapters",
    "app.services.network.ont_status_adapter",
    "app.services.network.ont_provision_steps",
    "app.services.network.ont_service_intent",
    "app.services.network.provisioning_coordinator",
    "app.services.network.result_adapter",
    "app.services.network.snmp_config",
    "app.services.network.subscriber_ont_adapter",
    "app.services.provisioning_managers",
    "app.services.reseller_portal",
    "app.services.snmp_discovery",
    "app.services.support",
    "app.services.table_config",
    "app.services.web_billing_invoice_batch",
    "app.services.web_billing_invoice_bulk",
    "app.services.web_billing_overview",
    "app.services.web_billing_payments",
    "app.services.web_billing_reconciliation",
    "app.services.web_customer_user_access",
    "app.services.web_fup",
    "app.services.web_integrations",
    "app.services.web_network_core_devices_forms",
    "app.services.web_network_core_devices_views",
    "app.services.web_network_core_runtime",
    "app.services.web_network_cpes",
    "app.services.web_network_dns_threats",
    "app.services.web_network_ip",
    "app.services.web_network_olts",
    "app.services.web_network_ont_charts",
    "app.services.web_network_ont_actions.config_setters",
    "app.services.web_network_ont_actions.context_builders",
    "app.services.web_network_ont_actions.device_actions",
    "app.services.web_network_ont_actions.db_config",
    "app.services.web_network_ont_actions.operational",
    "app.services.web_network_ont_autofind",
    "app.services.web_network_service_ports",
    "app.services.web_network_onu_types",
    "app.services.web_network_onts",
    "app.services.web_network_onts_provisioning",
    "app.services.web_reports_extended",
    "app.services.web_subscriber_forms",
    "app.services.web_system_export_tool",
    "app.services.web_system_geocode_tool",
    "app.services.web_system_import_wizard",
    "app.services.web_system_logs",
    "app.services.web_system_users",
    "app.services.web_vpn_management",
    "app.tasks.catalog",
    "app.tasks.olt_config_backup",
    "app.tasks.ont_authorization",
    "app.tasks.ont_bulk",
    "app.tasks.provisioning",
    "app.tasks.saga",
    "app.api.network_ont_ops",
    "app.services.customer_portal_flow_payments",
    "app.services.infrastructure_health",
    "app.services.zabbix_data_ingest",
    "app.web.admin.billing_accounts",
    "app.web.admin.integrations",
    "app.web.admin.network_core_devices",
    "app.web.admin.network_fiber_plant",
    "app.web.admin.network_olts",
    "app.web.admin.network_olts_inventory",
    "app.web.admin.network_olts_profiles",
    "app.web.admin.network_olts_onts",
    "app.web.admin.network_pop_sites",
    "app.web.admin.provisioning",
    "app.web.admin.resellers",
    "app.web.admin.subscribers",
    "app.web.admin.support_tickets",
    "app.web.admin.system",
    "app.websocket.manager",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "scripts.migration",
    "scripts.migration.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests",
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.services.catalog.add_ons",
    "app.services.catalog.credentials",
    "app.services.catalog.offers",
    "app.services.catalog.profiles",
    "app.services.catalog.radius",
    "app.services.gis",
    "app.services.network.cpe",
    "app.services.network.fiber_services",
    "app.services.network.ip",
    "app.services.network.olt",
    "app.services.network.splitters",
    "app.services.provisioning_managers",
]
disable_error_code = ["override"]

[tool.bandit]
exclude_dirs = ["tests", "alembic", "scripts"]
skips = [
    "B101",  # assert_used: handled by mypy/pytest; legacy/assertive code paths remain
    "B105",  # hardcoded_password_string: false positives on field names/placeholders
    "B106",  # hardcoded_password_funcarg: false positives on configured/default labels
    "B107",  # hardcoded_password_default: false positives on empty auth defaults
    "B110",  # try_except_pass: legacy best-effort cleanup paths
    "B112",  # try_except_continue: legacy best-effort parsing loops
    "B404",  # import_subprocess: subprocess is used deliberately with fixed argv
    "B603",  # subprocess_without_shell_equals_true: fixed argv, no shell
    "B508",  # snmp_insecure_version: network estate still uses SNMPv2c
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "playwright==1.46.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "bandit[toml]>=1.9.0",
    "pre-commit>=3.7.0",
    "import-linter>=2.0",
    "vulture (>=2.16,<3.0)"
]

# ─── Import boundaries (DCP-1 network / subscription decoupling) ──────────
#
# The network domain (OLT/ONT, IP, fiber, etc.) must not import directly
# from the subscription domain (subscribers, catalog, billing, subscription
# engine). Cross-domain interaction goes through well-defined service
# interfaces that later tickets in the DCP track will introduce.
#
# CPE (`app.services.network.cpe` and `cpe_*`) is intentionally descoped
# from this effort and is allow-listed.
[tool.importlinter]
# `app.api` and `app.schemas` are implicit namespace packages (no __init__.py)
# so they are not discovered via the root `app` package traversal. List them
# as additional roots so import-linter sees their modules.
root_packages = ["app", "app.api", "app.schemas"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Network domain must not import from subscription domain"
type = "forbidden"
source_modules = [
    # Treated as a package, so every submodule under network/ is included.
    "app.services.network",
    "app.models.network",
    "app.api.network_catalog",
    "app.api.network_olt_ops",
    "app.api.network_ont_ops",
    "app.schemas.network",
    "app.schemas.network_catalog",
    "app.schemas.network_metrics",
    "app.schemas.network_monitoring",
    "app.schemas.network_olt_ops",
    "app.schemas.network_ont_ops",
]
forbidden_modules = [
    "app.models.subscriber",
    "app.models.catalog",
    "app.models.billing",
    "app.models.subscription_change",
    "app.models.subscription_engine",
    "app.services.subscriber",
    "app.services.catalog",
    "app.services.billing",
    "app.services.subscription_changes",
    "app.services.subscription_engine",
]
# CPE is descoped from the OLT/ONT standalone decoupling effort; allow-list
# every cpe[_*].py module. Only imports that actually exist in the graph are
# required to match, hence unmatched_ignore_imports_alerting = "none".
ignore_imports = [
    # cpe.py
    "app.services.network.cpe -> app.models.subscriber",
    "app.services.network.cpe -> app.models.catalog",
    "app.services.network.cpe -> app.models.billing",
    "app.services.network.cpe -> app.models.subscription_change",
    "app.services.network.cpe -> app.models.subscription_engine",
    "app.services.network.cpe -> app.services.subscriber",
    "app.services.network.cpe -> app.services.catalog",
    "app.services.network.cpe -> app.services.billing",
    "app.services.network.cpe -> app.services.subscription_changes",
    "app.services.network.cpe -> app.services.subscription_engine",
    # cpe_actions.py
    "app.services.network.cpe_actions -> app.models.subscriber",
    "app.services.network.cpe_actions -> app.models.catalog",
    "app.services.network.cpe_actions -> app.models.billing",
    "app.services.network.cpe_actions -> app.models.subscription_change",
    "app.services.network.cpe_actions -> app.models.subscription_engine",
    "app.services.network.cpe_actions -> app.services.subscriber",
    "app.services.network.cpe_actions -> app.services.catalog",
    "app.services.network.cpe_actions -> app.services.billing",
    "app.services.network.cpe_actions -> app.services.subscription_changes",
    "app.services.network.cpe_actions -> app.services.subscription_engine",
    # cpe_action_device.py
    "app.services.network.cpe_action_device -> app.models.subscriber",
    "app.services.network.cpe_action_device -> app.models.catalog",
    "app.services.network.cpe_action_device -> app.models.billing",
    "app.services.network.cpe_action_device -> app.models.subscription_change",
    "app.services.network.cpe_action_device -> app.models.subscription_engine",
    "app.services.network.cpe_action_device -> app.services.subscriber",
    "app.services.network.cpe_action_device -> app.services.catalog",
    "app.services.network.cpe_action_device -> app.services.billing",
    "app.services.network.cpe_action_device -> app.services.subscription_changes",
    "app.services.network.cpe_action_device -> app.services.subscription_engine",
    # cpe_action_diagnostics.py
    "app.services.network.cpe_action_diagnostics -> app.models.subscriber",
    "app.services.network.cpe_action_diagnostics -> app.models.catalog",
    "app.services.network.cpe_action_diagnostics -> app.models.billing",
    "app.services.network.cpe_action_diagnostics -> app.models.subscription_change",
    "app.services.network.cpe_action_diagnostics -> app.models.subscription_engine",
    "app.services.network.cpe_action_diagnostics -> app.services.subscriber",
    "app.services.network.cpe_action_diagnostics -> app.services.catalog",
    "app.services.network.cpe_action_diagnostics -> app.services.billing",
    "app.services.network.cpe_action_diagnostics -> app.services.subscription_changes",
    "app.services.network.cpe_action_diagnostics -> app.services.subscription_engine",
    # cpe_action_network.py
    "app.services.network.cpe_action_network -> app.models.subscriber",
    "app.services.network.cpe_action_network -> app.models.catalog",
    "app.services.network.cpe_action_network -> app.models.billing",
    "app.services.network.cpe_action_network -> app.models.subscription_change",
    "app.services.network.cpe_action_network -> app.models.subscription_engine",
    "app.services.network.cpe_action_network -> app.services.subscriber",
    "app.services.network.cpe_action_network -> app.services.catalog",
    "app.services.network.cpe_action_network -> app.services.billing",
    "app.services.network.cpe_action_network -> app.services.subscription_changes",
    "app.services.network.cpe_action_network -> app.services.subscription_engine",
    # cpe_action_wifi.py
    "app.services.network.cpe_action_wifi -> app.models.subscriber",
    "app.services.network.cpe_action_wifi -> app.models.catalog",
    "app.services.network.cpe_action_wifi -> app.models.billing",
    "app.services.network.cpe_action_wifi -> app.models.subscription_change",
    "app.services.network.cpe_action_wifi -> app.models.subscription_engine",
    "app.services.network.cpe_action_wifi -> app.services.subscriber",
    "app.services.network.cpe_action_wifi -> app.services.catalog",
    "app.services.network.cpe_action_wifi -> app.services.billing",
    "app.services.network.cpe_action_wifi -> app.services.subscription_changes",
    "app.services.network.cpe_action_wifi -> app.services.subscription_engine",
    # cpe_tr069.py
    "app.services.network.cpe_tr069 -> app.models.subscriber",
    "app.services.network.cpe_tr069 -> app.models.catalog",
    "app.services.network.cpe_tr069 -> app.models.billing",
    "app.services.network.cpe_tr069 -> app.models.subscription_change",
    "app.services.network.cpe_tr069 -> app.models.subscription_engine",
    "app.services.network.cpe_tr069 -> app.services.subscriber",
    "app.services.network.cpe_tr069 -> app.services.catalog",
    "app.services.network.cpe_tr069 -> app.services.billing",
    "app.services.network.cpe_tr069 -> app.services.subscription_changes",
    "app.services.network.cpe_tr069 -> app.services.subscription_engine",
]
unmatched_ignore_imports_alerting = "none"
allow_indirect_imports = "true"
